# MyOpenCVProject

./: .gitignore  CMakeLists.txt  README.md  main.cpp  trainc.cpp  trainc.h  trainopen.cpp  trainopen.h
